nullaway_error_9368274E-62EC-4F3F-85C2-409FB45AA55F.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-context/src/main/java/org/springframework/validation/DataBinder.java:1185: error: [NullAway] dereferenced expression pv is @Nullable
					if (pv.getValue() instanceof String text) {
					      ^
    (see http://t.uber.com/nullaway )
